fixed overlap over modals on landing page

--- a/react-app/src/components/LandingPage/landing.css
+++ b/react-app/src/components/LandingPage/landing.css
@@ -20,7 +20,7 @@
 	text-align: center;
 	font-size: 8rem;
 	/* z-index places it on top */
-	z-index: 2;
+	z-index: 1;
 	position: relative;
 	/* background: #fff; */
 	padding: 20px;
